downloader/qtbittorrent-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qtbittorrent-ingress
  namespace: downloader
  annotations:
    cert-manager.io/cluster-issuer: letsencryptcertmanager
spec:
  tls:
  - hosts:
    - qtbittorrent.crobasaurusrex.ryanbeales.com
    secretName: qtbittorrent-crobasaurusrex-ryanbeales-com-tls
  rules:
  - host: qtbittorrent.crobasaurusrex.ryanbeales.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qtbittorrent-service
            port:
              number: 80
